fixed title and centered graphics on mobile

--- a/src/page-sections/covid19/covid.module.scss
+++ b/src/page-sections/covid19/covid.module.scss
@@ -37,9 +37,15 @@
 	display: flex;
 	width: 100%;
 	margin: 15px 0px 0px 0px;
+	justify-content: center;
 }
 
 @media (max-width: $phone) {
+	.overviewTitle {
+		font-size: 1.25rem;
+		font-weight: 300;
+	}
+
 	.textContainer {
 		display: flex;
 		flex-direction: column;
